Added Block-ad and more Layout options to index.html

--- a/index.html
+++ b/index.html
@@ -89,6 +89,30 @@
 				<div class="span2"><img src="/images/articleimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
 			</div>
 		</div>
+		
+		<div class="row">
+			<section class="article span4">
+				<img src="/images/articleimage/400250.jpeg" alt="Article image" >
+				<h1>Eventyrlig økserock</h1>
+			</section>			
+			<section class="article span4">
+				<div class="ad-v-block"></div>
+			</section>
+			<section class="article span4">
+				<img src="/images/articleimage/400250.jpeg" alt="Article image" >
+				<h1>Eventyrlig økserock</h1>
+			</section>
+
+		</div>
+
+		<div class="row">
+			<div class="span12">
+				<section class="article">
+					<img src="/images/articleimage/1200400.jpeg">
+					<h1>Eventyrlig økserock</h1>
+				</section>
+			</div>	
+		</div>
 
 		<div class="row v-margin">
 			<section class="article span4">
@@ -106,8 +130,26 @@
 				<p><h2>Eventyrlig økserock</h2></p>
 				<p><h2>Siv Andersen blir TIRC-leder</h2></p>
 			</section>
-		</div>
+		</div>	
 
+		<div class="row">
+			<div class="span4">
+				<section class="article">
+					<img src="http://baconmockup.com/300/200">
+					<h1>Rabalder i Bjørka</h1>
+				</section>
+				<section class="article">
+					<img src="http://baconmockup.com/300/200">
+					<h1>Rabalder i Bjørka</h1>
+				</section>
+			</div>
+			<div class="span8">
+				<section class="article">
+					<img src="http://baconmockup.com/600/437">
+					<h1>Rabalder i Bjørka</h1>
+				</section>
+			</div>	
+		</div>
 		<div class="row">
 			<div class="span6">
 				<section class="article">
@@ -131,14 +173,8 @@
 				</section>
 
 			</div>
-
-			<div class="span12">
-				<section class="article">
-					<img src="/images/articleimage/1200400.jpeg">
-					<h1>Eventyrlig økserock</h1>
-				</section>
-			</div>	
-		</div>	<!-- end row -->
+		</div>
+	<!-- end row -->
 
 		<footer>
 			<div class="row">
