Added a Tumbnail frame to the Mediabar to differ it from other content.

--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 		</div>
 
 		<div class="row">
-			<div id="multimediarow">
-				<div class="span2"><img src="/images/articleimage/mediabar.jpg" alt=""><p>CTRL+ALT+DELETE Episode 8</p></div>
-				<div class="span2"><img src="/images/articleimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
-				<div class="span2"><img src="/images/articleimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
-				<div class="span2"><img src="/images/articleimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
-				<div class="span2"><img src="/images/articleimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
-				<div class="span2"><img src="/images/articleimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
+			<div  id="multimediarow">
+				<div class="span2"><img src="/images/articleimage/mediabar.jpg" class="thumbnail" alt=""><p>CTRL+ALT+DELETE Episode 8</p></div>
+				<div class="span2"><img src="/images/articleimage/mediabar.jpg" class="thumbnail" alt=""><p>Aenean eu leo quam. </p></div>
+				<div class="span2"><img src="/images/articleimage/mediabar.jpg" class="thumbnail" alt=""><p>Aenean eu leo quam. </p></div>
+				<div class="span2"><img src="/images/articleimage/mediabar.jpg" class="thumbnail" alt=""><p>Aenean eu leo quam. </p></div>
+				<div class="span2"><img src="/images/articleimage/mediabar.jpg" class="thumbnail" alt=""><p>Aenean eu leo quam. </p></div>
+				<div class="span2"><img src="/images/articleimage/mediabar.jpg" class="thumbnail" alt=""><p>Aenean eu leo quam. </p></div>
 			</div>
 		</div>
 		
